updated from weblate

--- a/translations/en.po
+++ b/translations/en.po
@@ -2,8 +2,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-25 17:07+0000\n"
+"Report-Msgid-Bugs-To: https://weblate.sir.insidi.at/or/projects/easytravel/"
+"messages/\n"
+"POT-Creation-Date: 2022-06-26 13:09+0000\n"
 "PO-Revision-Date: 2022-06-25 17:07+0000\n"
 "Last-Translator: sirinsidiator <sir@insidi.at>\n"
 "Language-Team: English <https://weblate.sir.insidi.at/or/projects/easytravel/"
