--- a/translations/zh.po
+++ b/translations/zh.po
@@ -3,7 +3,6 @@
 # This file is distributed under the same license as the EasyTravel package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: EasyTravel\n"
@@ -11,11 +10,11 @@ msgstr ""
 "messages/\n"
 "POT-Creation-Date: 2022-06-26 13:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: zh\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. TRANSLATORS: Title of the dialog shown while jumping to a new location. The variable is for the name of the location.
